Improvements for second testing

--- a/training.ipynb
+++ b/training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "91be239d",
    "metadata": {},
    "outputs": [
@@ -78,10 +78,10 @@
     }
    ],
    "source": [
-    "!pip install torch\n",
-    "!pip install numpy\n",
-    "!pip install opencv-python\n",
-    "!pip install torchvision"
+    "# !pip install torch\n",
+    "# !pip install numpy\n",
+    "# !pip install opencv-python\n",
+    "# !pip install torchvision"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c04420c1",
    "metadata": {},
    "outputs": [],
@@ -114,13 +114,13 @@
     "        super(VideoClassifier, self).__init__()\n",
     "        # Define layers\n",
     "        # Initialize the feature extractor (ResNet)\n",
-    "        # We load a pre-trained ResNet-50 model\n",
-    "        resnet = models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1)\n",
+    "        # We load a pre-trained ResNet-18 model\n",
+    "        resnet = models.resnet18(weights=models.ResNet18_Weights.IMAGENET1K_V1)\n",
     "        # Remove the final fully connected layer\n",
     "        self.feature_extractor = torch.nn.Sequential(*list(resnet.children())[:-1])\n",
     "\n",
     "        # The output of ResNet-50 is 2048-dimensional\n",
-    "        resnet_feature_size = 2048\n",
+    "        resnet_feature_size = 512\n",
     "\n",
     "        # Create gru to process sequences of features\n",
     "        self.gru = torch.nn.GRU(\n",
@@ -234,16 +234,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8423c0cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Shrink images down in the video using resnet51\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "494c3d42",
    "metadata": {},
@@ -271,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "71ac6cb2",
    "metadata": {},
    "outputs": [
@@ -339,11 +329,22 @@
     "dataset = VideoDataset(video_paths, labels, transforms=preprocess)\n",
     "\n",
     "from torch.utils.data import DataLoader\n",
-    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "dataloader = DataLoader(\n",
+    "    dataset, \n",
+    "    batch_size=batch_size, \n",
+    "    shuffle=True,\n",
+    "    pin_memory=True,\n",
+    "    num_workers=4\n",
+    "    )\n",
     "# Initialize the model, loss function, and optimizer\n",
     "model = VideoClassifier(num_classes=2).to(device)\n",
+    "for param in model.feature_extractor.parameters():\n",
+    "    param.requires_grad = False  # Freeze the feature extractor\n",
+    "\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    filter(lambda p: p.requires_grad, model.parameters()), \n",
+    "    lr=learning_rate)\n",
     "\n",
     "# Training Loop\n",
     "print(\"Starting training...\")\n",
@@ -368,6 +369,9 @@
     "        optimizer.step()\n",
     "        \n",
     "        running_loss += loss.item()\n",
+    "\n",
+    "        del inputs, labels, outputs, loss  # Free up memory\n",
+    "        torch.cuda.empty_cache()  # Clear the GPU cache if using GPU\n",
     "        \n",
     "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(dataloader):.4f}\")\n",
     "\n",
